--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -4,6 +4,8 @@
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
 // Color system
+$maingreen:#62DB54;
+$mainblue:#09ACF5;
 
 // scss-docs-start gray-color-variables
 $white:    #fff !default;
