--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -13,24 +13,24 @@
 
   <body>
  
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark zindex-dropdown">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
           <img src="./assets/images/logo.svg" alt="" width="180" height="60">
         </a>
- 
+
         <div class="d-flex justify-content-between">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">首頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">課程介紹</a>
             </li>
           </ul>
                       <!-- Button trigger modal -->
             <button type="button" class="btn text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <span class="material-symbols-outlined ">
+              <span class="material-symbols-outlined">
                 account_circle
                 </span>登入
             </button>
@@ -55,7 +55,13 @@
           </div>
         </div>
       </div>
+
     </nav>
+    <div class="bar d-flex">
+       <span class="bar-green"></span>
+       <span class="bar-blue"></span>
+    </div>
+    
     <%- contents %>
 
     <footer class="footer">
