--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -69,8 +69,8 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #00cc99; // $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       #62DB54; // $blue !default;
+$secondary:     #09ACF5;//$gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -251,12 +251,13 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 // scss-docs-start spacer-variables-maps
 $spacer: 1rem !default;
 $spacers: (
-  0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  0: 0,//0
+  1: $spacer * .25,//4px
+  2: $spacer * .5,//8px
+  3: $spacer,//16px
+  4: $spacer * 1.25,//20px
+  5: $spacer * 1.5,//24px
+  6:  $spacer * 3,//48px
 ) !default;
 
 $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null) !default;
@@ -278,7 +279,7 @@ $position-values: (
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $black !default;
+$body-bg:                   #1C1C1C !default;
 $body-color:                $gray-900 !default;
 $body-text-align:           null !default;
 
@@ -443,22 +444,25 @@ $line-height-base:            1.5 !default;
 $line-height-sm:              1.25 !default;
 $line-height-lg:              2 !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$h1-font-size:                $font-size-base * 3 !default;//48px
+$h2-font-size:                $font-size-base * 2 !default;//32px
+$h3-font-size:                $font-size-base * 1.75 !default;//28px
+$h4-font-size:                $font-size-base * 1.5 !default;//24px
+$h5-font-size:                $font-size-base * 1.25 !default;//20
+$h6-font-size:                $font-size-base !default;//16px
 // scss-docs-end font-variables
 
-// scss-docs-start font-sizes
+// scss-docs-start font-sizes class="fs-1"
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size
+  1: $h1-font-size,//48px
+  2: $h2-font-size,//32px
+  3: $h3-font-size,//28px
+  4: $h4-font-size,//24px
+  5: $font-size-base*1.375,//22px
+  6: $h5-font-size,//20px
+  7: $font-size-base*1.125,//18px
+  8: $font-size-base*0.875,//14px
+  9: $font-size-base*0.75,//12px
 ) !default;
 // scss-docs-end font-sizes
 
@@ -1096,7 +1100,7 @@ $card-cap-bg:                       rgba($black, .03) !default;
 $card-cap-color:                    null !default;
 $card-height:                       null !default;
 $card-color:                        null !default;
-$card-bg:                           $white !default;
+$card-bg:                           #1C1C1C;//$white !default;
 $card-img-overlay-padding:          $spacer !default;
 $card-group-margin:                 $grid-gutter-width * .5 !default;
 // scss-docs-end card-variables
