--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -48,6 +48,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$gray:    #C1C1C1;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -63,7 +64,7 @@ $colors: (
   "teal":       $teal,
   "cyan":       $cyan,
   "white":      $white,
-  "gray":       $gray-600,
+  "gray":      #C1C1C1, // $gray-600,
   "gray-dark":  $gray-800
 ) !default;
 // scss-docs-end colors-map
