--- a/app/assets/style/layout/_index.scss
+++ b/app/assets/style/layout/_index.scss
@@ -1,5 +1,6 @@
 $maindark:#202020;
 $secondarydark:#2D2D2D;
+$mainbg:#1C1C1C;
 
 
 ul,li{
@@ -55,6 +56,9 @@ header{
     width: 10px;
     height: 10px;
   }
+  h1{
+    font-size: 48px;
+  }
  
 }
  
@@ -63,7 +67,6 @@ header{
   background-color: $secondarydark;
  
   .card{
- 
     background-color: $secondarydark;
     border: none;
     min-height: 100%;
@@ -76,7 +79,6 @@ header{
     background-color: $maindark;
     border: $primary 1px solid;
     opacity: 1;
-
   }
   .icon{
     color: $white;
@@ -94,15 +96,66 @@ header{
 
 }
 
-
+.title::after{
+  content: '    ';
+  border-bottom: $primary 3px solid;
+  margin: 0 auto;
+  width:3rem;
+  display: block;
+  padding-top: 1rem;
+}
 //sec2
 .classprocess{
-  h2::after{
-    padding: 8px;
-    content: '  ';
-    border-bottom: $primary 3px solid;
-    width: 3rem;
-    margin: 0 auto;
+  background-color: $mainbg;
+
+
+  .card{
+    border-radius: 12px;
+  }
+
+  h3{
+    font-family: 'Azeret Mono', monospace;
+    left:3rem;
+    background-color: $mainbg;
   }
  
 }
+//sec3
+.programbanner{
+  background-color: $secondarydark;
+    .btn{
+      border-radius: 8px;
+    }
+
+  }
+
+  //sec4
+  .hotclass{
+    .card{
+      border-radius: 24px;
+      background-color: $secondarydark;
+      border: $maindark 2px solid;
+    }
+    .card:hover{
+      border: $primary 2px solid;
+    
+    }
+    img{
+      width: 100px;
+      height: 100px;
+      border-radius: 50px;
+  
+    }
+    .card-footer{
+      border-top: #c1c1c1 1px solid;
+    }
+    .price{
+      font-family: 'Azeret Mono', monospace;
+    }
+ 
+    .showclassbtn{
+      background-image: linear-gradient(104deg, #62DB54, #09ACF5);
+      border-radius: 8px;
+      
+    }
+  }
