--- a/app/assets/style/layout/_index.scss
+++ b/app/assets/style/layout/_index.scss
@@ -135,17 +135,23 @@ header{
       border-radius: 24px;
       background-color: $secondarydark;
       border: $maindark 2px solid;
+      min-height: 100%;
+   
     }
     .card:hover{
       border: $primary 2px solid;
-    
+
     }
+  h4,h5{
+    height: 1.5rem;
+  }
     img{
       width: 100px;
       height: 100px;
       border-radius: 50px;
   
     }
+   
     .card-footer{
       border-top: #c1c1c1 1px solid;
     }
@@ -159,3 +165,162 @@ header{
       
     }
   }
+
+.infomation{
+
+  .cards{
+    width: 25%;
+
+      .info01{
+        height: 615px;
+        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week6-202207/info01.jpg');
+        filter: grayscale(100%);
+      }
+      .info02{
+        background-position: center ;
+        height: 615px;
+        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week6-202207/info02.jpg');
+        filter: grayscale(100%);
+      }
+      
+      .info03{
+        background-position: center ;
+        height: 615px;
+        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week6-202207/info03.jpg');
+        filter: grayscale(100%);
+      }
+      .info04{
+        background-position: center ;
+        height: 615px;
+        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week6-202207/info04.jpg');
+        filter: grayscale(100%);
+      }
+      .cardtext{
+        top:10rem;
+        left:2rem;
+      }
+      .infoicon{
+        color: $white;
+        opacity: 0.7;
+      }
+      h4:after{
+        padding-top: 1rem;
+        display: block;
+        width: 20%;
+        content: '';
+        border-bottom: $white 3px solid;
+        transition: 0.2s;
+      }
+      h5{
+        color:$gray;
+      }
+      // HOVER區
+      .info01:hover{  
+          filter: none;
+          transition: 0.2s;
+            .infoicon{
+              color: $primary;
+              opacity: 1;
+              transition: 0.2s;
+            }
+            h4:after{
+              padding-top: 1rem;
+              display: block;
+              width: 30%;
+              content: '';
+              border-bottom: $primary 3px solid;
+              transition: 0.2s;
+            }
+            h5{
+              color: $white;
+              opacity: 1;
+            }
+      }
+
+      //第二區HOVER
+      .info02:hover{  
+        filter: none;
+        transition: 0.2s;
+          .infoicon{
+            color: $primary;
+            opacity: 1;
+            transition: 0.2s;
+          }
+          h4:after{
+            padding-top: 1rem;
+            display: block;
+            width: 30%;
+            content: '';
+            border-bottom: $primary 3px solid;
+            transition: 0.2s;
+          }
+          h5{
+            color: $white;
+            opacity: 1;
+          }
+        }
+
+      //第三區
+      .info03:hover{  
+        
+        filter: none;
+        transition: 0.2s;
+          .infoicon{
+            color: $primary;
+            opacity: 1;
+            transition: 0.2s;
+          }
+          h4:after{
+            padding-top: 1rem;
+            display: block;
+            width: 30%;
+            content: '';
+            border-bottom: $primary 3px solid;
+            transition: 0.2s;
+          }
+          h5{
+            color: $white;
+            opacity: 1;
+          }
+        }
+      //第四區
+      .info04:hover{  
+        filter: none;
+        transition: 0.2s;
+          .infoicon{
+            color: $primary;
+            opacity: 1;
+            transition: 0.2s;
+          }
+          h4:after{
+            padding-top: 1rem;
+            display: block;
+            width: 30%;
+            content: '';
+            border-bottom: $primary 3px solid;
+            transition: 0.2s;
+          }
+          h5{
+            color: $white;
+            opacity: 1;
+          }
+    }
+
+
+  }
+
+}
+
+//文章分享
+
+.articalshare{
+  background-color: $maindark;
+  .cardS{
+    background-color: $maindark;
+  }
+  .cards:hover{
+    border: $primary 1px solid;
+    border-radius: 24px;
+  }
+ 
+}
