--- a/app/assets/style/layout/_index.scss
+++ b/app/assets/style/layout/_index.scss
@@ -173,7 +173,7 @@ header{
 
       .info01{
         height: 615px;
-        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week6-202207/info01.jpg');
+        background-image:linear-gradient(rgba(60,60,60,0.5), rgba(60,60,60,0.3)),url('./assets/images/info01.jpg');
         filter: grayscale(100%);
       }
       .info02{
