--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -65,10 +65,9 @@
     
     <%- contents %>
 
-    <footer class="footer">
-    
+    <footer class="footer fs-8 p-3 text-center">
+      Coding Home © 2022 All Rights Reserved
     </footer>
- 
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
 
