--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -26,7 +26,7 @@
               <a class="nav-link" aria-current="page" href="#">首頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">課程介紹</a>
+              <a class="nav-link" href="class.html">課程介紹</a>
             </li>
           </ul>
                       <!-- Button trigger modal -->
