--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -23,7 +23,7 @@
         <div class="d-flex justify-content-between">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">首頁</a>
+              <a class="nav-link" aria-current="page" href="index.html">首頁</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="class.html">課程介紹</a>
