--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -13,14 +13,14 @@
   </head>
 
   <body>
- 
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark zindex-dropdown">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
           <img src="./assets/images/logo.svg" alt="" width="180" height="60">
         </a>
 
-        <div class="d-flex justify-content-between">
+        <div class="d-md-flex justify-content-between d-sm-column">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">首頁</a>
